# ai-dt

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  MANIFEST.in  README_DIFY.md  TODO.md  USAGE.md  analyze_complex_project.py  analyze_custom_functions.py  check_env.py  claude_install.sh  create_package.sh  debug_real_config.py  demo_agentic_coding.py  generate_calculateSphereVolume_test.py  generate_complex_tests_deepseek.py  generate_simple_deepseek_test.py  generate_tests.py  manual_analysis.py  package-lock.json  pytest.ini  requirements-security.txt  requirements.md  requirements.txt  run_test_generation.py  setup.py  test_analyzer.py  test_api_client.py  test_comprehensive_validation.py  test_context_with_macros.py  test_coverage_analysis_20250127.md  test_e2e_validation.py  test_extract_function.py  test_generated_tests.py  test_llm_integration.py  test_macro_extraction.py  test_matcher_debug.py  test_real_project.py  (+3 more)
api-server/: README.md  app.py  requirements.txt  simple_chat_demo.py  start_server.bat  start_server.sh
config/: README.md  compile_fix.yaml  complex_c_test_generation.yaml  mcp-continue.json  mcp_config.yaml  sample_dify.curl.example  selective_test.yaml  template_config.yaml  test_generation.yaml
demo_project/: CMakeLists.txt
docs/: API_SERVER_GUIDE.md  AUTO_RUN_FEAT.md  PROJECT_WIKI.md  TODO.md  code_organization_guide.md  command_line_usage_guide.md  current_scheme_review.md  mcp_integration.md  prompt_context_usage.md  quick_start_streaming.md  streaming_architecture_guide.md  test_generation_detailed_design.md
docs/technical_design/: jinja2_template_system_design.md  vscode_extension_detailed_design.md
docs/work_logs/: 2024-12-19-dotenv-loading-fix-completion.md  2024-12-19-fix-dotenv-loading.md  20240824_claude_md_streamlining.md  20240824_context_compression_refactoring.md  20240824_deepseek_complex_project_test.md  20250110_test_fixes_completion.md  20250110_test_protection_completion_summary.md  20250113_legacy_cleanup.md  20250127_final_test_status.md  20250127_test_coverage_report.md  20250127_test_fixes_summary.md  20250131_c_database_systematic_code_review.md  20250131_llm_openai_to_requests_refactoring.md  20250131_prompt_template_test_class_structure_fix.md  20250131_test_projects_optimization.md  20250203_code_review_prompt_template_system.md  20250203_dependency_definitions_formatting_fix.md  20250203_memory_guidance_removal.md  20250203_prompt_template_loader_test_fixes.md  20250824_batch_processing_implementation.md  20250824_context_compression_analysis.md  20250824_function_filtering_analysis.md  20250824_function_filtering_fix.md  20250824_mockcpp_enhancement.md  20250824_prompt_engineering_refactoring.md  20250824_prompt_refactoring.md  20250824_prompt_template_enhancement.md  20250824_prompt_template_mockcpp_fix.md  (+38 more)
generated_tests/: test_add.cpp
generated_tests_complex_c/: compile_tests.sh  test_list_append.cpp  test_list_create.cpp  test_list_destroy.cpp
generated_tests_complex_deepseek/: test_calculateCircleArea.cpp  test_calculateSphereVolume.cpp  test_operator-.cpp
generated_tests_deepseek_deepseek-chat/: test_divide.cpp
generated_tests_deepseek_deepseek-coder/: test_divide.cpp
generated_tests_demo/: test_divide.cpp  test_multiply.cpp  test_subtract.cpp
scripts/: batch_test_generation.py  check_env.py  demo_complex_c_integration.py  demo_deepseek_integration.py  demo_llm_integration.py
src/: __init__.py  __main__.py  main.py  mcp_server.py
test_projects/c/: CMakeLists.txt  compile_commands.json  main.c  math_utils.c  math_utils.h
test_projects/complex_c_project/: CMakeLists.txt  compile_commands.json  main.c
test_projects/complex_c_project/data_structures/: hash_table.c  hash_table.h  linked_list.c  linked_list.h
test_projects/complex_c_project/tests/: test_fixture_base.cpp
test_projects/complex_c_project/utils/: memory_pool.c  memory_pool.h
test_projects/complex_example/: CMakeLists.txt  advanced_math.cpp  advanced_math.h  compile_commands.json  main.cpp
test_projects/cpp/: CMakeLists.txt  calculator.cpp  calculator.h  compile_commands.json  main.cpp
test_projects/fix_bugs_project/: CMakeLists.txt
test_projects/fix_bugs_project/src/: hash_table.c  hash_table.h
test_projects/fix_bugs_project/tests/: generated_suite.cpp  test_hash_table.cpp
test_projects/large_project/: CMakeLists.txt  compile_commands.json  main.c
test_projects/large_project/algorithms/: sorting.c
test_projects/large_project/converters/: type_converters.c
test_projects/large_project/data_structures/: structures.c
test_projects/large_project/graphics/: geometry.c
test_projects/large_project/math_utils/: math_operations.c
test_projects/large_project/parsers/: data_parser.c
test_projects/large_project/string_utils/: string_operations.c
test_projects/large_project/validators/: input_validators.c
test_projects/simple_c_project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c  utils.c  utils.h
test_projects/simple_c_project/tests/: test_utils.cpp
tests/: test_prompt_template_loader.py  test_refactored_architecture.py
(+135 files in other folders)
